<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="267dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/app_logo"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_firstName"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:background="@color/colorPrimaryLight"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_lastName"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:background="@color/colorPrimaryLight"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:background="@color/colorPrimaryLight"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:background="@color/colorPrimaryLight"/>

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:background="@color/colorPrimaryLight">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"
                android:textColor="@color/colorPrimary"
                app:buttonTint="@color/colorPrimary" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/colorPrimary"
                app:buttonTint="@color/colorPrimary"/>


        </RadioGroup>

        <EditText
            android:id="@+id/editTextDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:focusable="false"
            android:hint="@string/enter_dob"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:background="@color/colorPrimaryLight"/>


        <EditText
            android:id="@+id/editTextDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:hint="@string/doctor"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHighlight"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryLight"/>

    </LinearLayout>
</RelativeLayout>