<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.asuspc.wecg.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_mode"
                android:textColor="@color/colorPrimary"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <Switch
            android:id="@+id/switchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leadII"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth"
                app:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="?android:attr/listDivider" />

        </LinearLayout>


        <Switch
            android:id="@+id/switchBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textColor="@color/colorPrimary"
            android:id="@+id/scan"
            android:background="@color/colorPrimaryLight"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:textColor="@color/colorPrimary"
            android:id="@+id/textViewTap"
            android:visibility="gone"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/devicesListView"
            android:choiceMode="singleChoice" />

    </LinearLayout>

</RelativeLayout>