<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_account_circle"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:hint="@string/enter_firstName"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHighlight" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:hint="@string/enter_lastName"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHighlight" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHighlight" />


            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/male"
                    android:textColor="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/female"
                    android:textColor="@color/colorPrimary" />

            </RadioGroup>

            <EditText
                android:id="@+id/editTextDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:focusable="false"
                android:hint="@string/enter_dob"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHighlight" />

            <EditText
                android:id="@+id/editTextDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:hint="@string/doctor"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorHighlight" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/records" />

            <TextView
                android:id="@+id/textViewRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/update"
                android:textColor="@color/colorPrimaryLight" />

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/logout"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>